solved alignment issue

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ img{
     margin-bottom: 30px;
 }
 .main-container > div{
-    flex: 1 1 0;
+    min-width: 275px;
 }
 .card{
     margin: 20px 10px;
@@ -55,6 +55,12 @@ img{
     text-align: left;
     margin: 10px 85px 10px 10px;
 }
+.cards-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .card-heading{
     font-size: 1.2rem;
     font-weight: 600;
@@ -67,15 +73,19 @@ img{
 }
 .supervisor{
     border-color: hsl(180, 62%, 55%);
+    margin: 20px 20px;
 }
 .team-builder{
     border-color: hsl(0, 78%, 62%);
+    margin: 20px 0;
 }
 .karma{
     border-color: hsl(34, 97%, 64%);
+    margin: 20px 0;
 }
 .calculator{
     border-color: hsl(212, 86%, 64%);
+    margin: 20px 20px;
 }
 @media (max-width: 1024px){
     .main-container{
